--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
   "welcome": {
-    "start": "Start Chat",
+    "start": "Start   Meeting",
     "abstract": "Secure direct group video chat",
     "help": "Learn More",
     "created": "Created by"
